# bundle-file-tool-v2

./: .gitignore  FIX_EVERYTHING.py  bundle_config.json  bundle_config.json.102125.bak  bundle_session_20251101_043259_6faa9789.json  bundle_session_20251101_043259_b9219a6b.json  bundle_session_20251101_044821_0bfecdf1.json  bundle_session_20251101_044821_aa9a2c41.json  bundle_session_20251101_045155_94e6e761.json  bundle_session_20251101_045155_f0853977.json  bundle_session_20251101_045745_076c9fa7.json  bundle_session_20251101_045745_b1a8f82c.json  bundle_session_20251101_050718_251c072a.json  bundle_session_20251101_050718_35b00a83.json  bundle_session_20251101_050806_74912fd4.json  bundle_session_20251101_050806_eb6e3223.json  bundle_session_20251101_050845_55070fd2.json  bundle_session_20251101_050845_d0f6ab34.json  bundle_session_20251102_181919_8b2f1034.json  bundle_session_20251102_181919_ece8a26f.json  code_catalog_comparison_tool_v2.py  code_catalog_comparison_v3_3.py  code_catalogger_v2.py  code_catalogger_v3.py  command_diffs.csv  mapped_diff.txt  new.json  old.json  output.txt  plain_marker_diff.txt  plain_marker_new.json  plain_marker_old.json  project.txt  pyproject.toml  pytest.ini  report.txt  requirements.txt  update_repo.bat  writer_new.json  writer_old.json
src/: cli - Copy.py  cli.py  main.py
tests/: conftest.py  conftest.py.102025.bak
verification/: harness_Binary_Safe_Roundtrip_v1.py  harness_Binary_Safe_Roundtrip_v2.py  harness_binary_detection.py  harness_discover_files_v1.py  harness_glob_filter_v2.py  harness_glob_filter_v3.py  (+8 more)
(+91 files in other folders)
